RESOLVED FIXED104604
REGRESSION (r137006): CSS clip on solid color composited div broken
https://bugs.webkit.org/show_bug.cgi?id=104604
Summary REGRESSION (r137006): CSS clip on solid color composited div broken
Simon Fraser (smfr)
Reported 2012-12-10 15:18:06 PST
Created attachment 178644 [details] Testcase r137006 broke CSS clip in some cases. See attached testcase.
Attachments
Testcase (1.31 KB, text/html)
2012-12-10 15:18 PST, Simon Fraser (smfr)
no flags
Patch (6.24 KB, patch)
2012-12-10 16:03 PST, Noam Rosenthal
no flags
Patch (7.54 KB, patch)
2012-12-10 21:44 PST, Noam Rosenthal
no flags
Patch for landing (7.54 KB, patch)
2012-12-10 22:29 PST, Noam Rosenthal
no flags
Noam Rosenthal
Comment 1 2012-12-10 16:03:27 PST
WebKit Review Bot
Comment 2 2012-12-10 17:52:03 PST
Comment on attachment 178658 [details] Patch Attachment 178658 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/15238786 New failing tests: platform/chromium/virtual/softwarecompositing/geometry/clip-inside.html compositing/geometry/clip-inside.html
Simon Fraser (smfr)
Comment 3 2012-12-10 17:55:45 PST
Comment on attachment 178658 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=178658&action=review > LayoutTests/compositing/geometry/clip-inside.html:3 > +<!-- saved from url=(0066)https://bug-104604-attachments.webkit.org/attachment.cgi?id=178644 --> > +<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> You could clean this up.
Noam Rosenthal
Comment 4 2012-12-10 21:44:31 PST
Noam Rosenthal
Comment 5 2012-12-10 22:29:44 PST
Created attachment 178719 [details] Patch for landing
WebKit Review Bot
Comment 6 2012-12-10 22:45:14 PST
Comment on attachment 178719 [details] Patch for landing Clearing flags on attachment: 178719 Committed r137250: <http://trac.webkit.org/changeset/137250>
WebKit Review Bot
Comment 7 2012-12-10 22:45:18 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.