REGRESSION (r137006): CSS clip on solid color composited div broken https://bugs.webkit.org/show_bug.cgi?id=104604

Patch by No'am Rosenthal <noam@webkit.org> on 2012-12-10
Reviewed by Simon Fraser.

Source/WebCore:

Disable direct compositing of background color for clipping layers.

Test: compositing/geometry/clip-inside.html

* rendering/RenderLayerBacking.cpp:
(WebCore::supportsDirectBoxDecorationsComposition):
    Never allow direct background composition if there is a clip.

LayoutTests:

Added a new test (by Simon Fraser) to make sure background color doesn't break clipping.

* compositing/geometry/clip-inside-expected.txt: Added.
* compositing/geometry/clip-inside.html: Added.
* compositing/geometry/clip-expected:
        New result.

* platform/chromium/compositing/geometry/clip-inside-expected.txt
        Adjust Chromium expected result for new test.

Canonical link: https://commits.webkit.org/122805@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137250 268f45cc-cd09-0410-ab3c-d52691b4dbfc